[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memview"
version = "0.1.0"
description = "Introspect and visualize binary memory layouts"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Ioannis D (devcoons)", email = "support@devcoons.com" }]
license = "MIT"
requires-python = ">=3.11"
keywords = ["memview", "firmware", "binary", "intel-hex", "srec"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = ["ihexsrec>=0.1.0"]

[project.optional-dependencies]
yaml  = ["PyYAML>=6.0"]
svg   = ["svgwrite>=1.4"]
elf   = ["pyelftools>=0.30"]
hash  = ["xxhash>=3.4"]
speed = ["sortedcontainers>=2.4"]
dev   = ["pytest>=8", "mypy>=1.10", "ruff>=0.5", "pip-tools>=7"]

[project.scripts]
memview = "memview.cli:main"

[project.urls]
Homepage = "https://github.com/devcoons/memview"
Issues   = "https://github.com/devcoons/memview/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["memview*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["memview"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
